--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "@fotobox-v2/source",
+  "name": "mvse-fotobox",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "postinstall": "electron-builder install-app-deps"
+  },
   "private": true,
   "dependencies": {
     "@angular/common": "~19.2.0",
@@ -13,6 +15,7 @@
     "@angular/platform-browser-dynamic": "~19.2.0",
     "@angular/router": "~19.2.0",
     "rxjs": "~7.8.0",
+    "sharp": "^0.34.2",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
@@ -26,6 +29,7 @@
     "@nx/angular": "20.8.2",
     "@nx/eslint": "20.8.2",
     "@nx/eslint-plugin": "20.8.2",
+    "@nx/jest": "^20.8.2",
     "@nx/js": "20.8.2",
     "@nx/web": "20.8.2",
     "@nx/workspace": "20.8.2",
@@ -33,12 +37,20 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/jest": "^29.5.12",
+    "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.19.0",
     "angular-eslint": "^19.2.0",
+    "electron": "^33.3.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "nx": "20.8.2",
+    "nx-electron": "^20.0.2",
     "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0"
