--- a/apps/fotobox-electron/tsconfig.app.json
+++ b/apps/fotobox-electron/tsconfig.app.json
@@ -9,7 +9,17 @@
     "**/*.test.ts",
     "jest.config.ts",
     "src/**/*.spec.ts",
-    "src/**/*.test.ts"
+    "src/**/*.test.ts",
+    "vite.config.ts",
+    "vite.config.mts",
+    "vitest.config.ts",
+    "vitest.config.mts",
+    "src/**/*.test.tsx",
+    "src/**/*.spec.tsx",
+    "src/**/*.test.js",
+    "src/**/*.spec.js",
+    "src/**/*.test.jsx",
+    "src/**/*.spec.jsx"
   ],
   "include": ["**/*.ts"]
 }
