--- a/apps/fotobox-v2/project.json
+++ b/apps/fotobox-v2/project.json
@@ -66,7 +66,8 @@
       "defaultConfiguration": "development",
       "options": {
         "proxyConfig": "apps/fotobox-v2/proxy.conf.json"
-      }
+      },
+      "continuous": true
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
