--- a/package.json
+++ b/package.json
@@ -7,52 +7,59 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~19.2.0",
-    "@angular/compiler": "~19.2.0",
-    "@angular/core": "~19.2.0",
-    "@angular/forms": "~19.2.0",
-    "@angular/platform-browser": "~19.2.0",
-    "@angular/platform-browser-dynamic": "~19.2.0",
-    "@angular/router": "~19.2.0",
+    "@angular/common": "20.0.6",
+    "@angular/compiler": "20.0.6",
+    "@angular/core": "20.0.6",
+    "@angular/forms": "20.0.6",
+    "@angular/platform-browser": "20.0.6",
+    "@angular/platform-browser-dynamic": "20.0.6",
+    "@angular/router": "20.0.6",
     "rxjs": "~7.8.0",
     "sharp": "^0.34.2",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~19.2.0",
-    "@angular-devkit/core": "~19.2.0",
-    "@angular-devkit/schematics": "~19.2.0",
-    "@angular/cli": "~19.2.0",
-    "@angular/compiler-cli": "~19.2.0",
-    "@angular/language-service": "~19.2.0",
+    "@angular-devkit/build-angular": "20.0.5",
+    "@angular-devkit/core": "20.0.5",
+    "@angular-devkit/schematics": "20.0.5",
+    "@angular/cli": "~20.0.0",
+    "@angular/compiler-cli": "20.0.6",
+    "@angular/language-service": "20.0.6",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "20.8.2",
-    "@nx/eslint": "20.8.2",
-    "@nx/eslint-plugin": "20.8.2",
-    "@nx/jest": "^20.8.2",
-    "@nx/js": "20.8.2",
-    "@nx/web": "20.8.2",
-    "@nx/workspace": "20.8.2",
-    "@schematics/angular": "~19.2.0",
+    "@nx/angular": "21.2.1",
+    "@nx/eslint": "21.2.1",
+    "@nx/eslint-plugin": "21.2.1",
+    "@nx/jest": "21.2.1",
+    "@nx/js": "21.2.1",
+    "@nx/vite": "^21.2.1",
+    "@nx/web": "21.2.1",
+    "@nx/workspace": "21.2.1",
+    "@schematics/angular": "20.0.5",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
-    "@typescript-eslint/utils": "^8.19.0",
-    "angular-eslint": "^19.2.0",
-    "electron": "^33.3.0",
-    "eslint": "^9.8.0",
+    "@typescript-eslint/utils": "^8.33.1",
+    "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/ui": "^3.0.0",
+    "angular-eslint": "20.1.1",
+    "electron": "^37.1.0",
+    "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.0.0",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
-    "nx": "20.8.2",
-    "nx-electron": "^20.0.2",
+    "jiti": "2.4.2",
+    "jsdom": "~22.1.0",
+    "nx": "21.2.1",
+    "nx-electron": "^21.0.1",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.19.0"
+    "typescript": "5.8.3",
+    "typescript-eslint": "^8.33.1",
+    "vite": "^6.0.0",
+    "vitest": "^3.0.0"
   }
 }
