--- a/apps/fotobox-ui/tsconfig.editor.json
+++ b/apps/fotobox-ui/tsconfig.editor.json
@@ -1,6 +1,9 @@
 {
   "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "module": "esnext",
+    "moduleResolution": "bundler"
+  },
   "include": ["src/**/*.ts"],
-  "compilerOptions": {},
-  "exclude": ["jest.config.ts", "src/**/*.test.ts", "src/**/*.spec.ts"]
+  "exclude": ["src/**/*.test.ts", "src/**/*.spec.ts"]
 }
