--- a/apps/fotobox-ui/project.json
+++ b/apps/fotobox-ui/project.json
@@ -78,6 +78,24 @@
     "lint": {
       "executor": "@nx/eslint:lint"
     },
+    "test": {
+      "executor": "@nx/vitest:test",
+      "outputs": ["{options.reportsDirectory}"],
+      "options": {
+        "reportsDirectory": "../../coverage/apps/fotobox-ui",
+        "passWithNoTests": false
+      },
+      "configurations": {
+        "ci": {
+          "ci": true,
+          "reporters": ["default"],
+          "coverage": {
+            "provider": "v8",
+            "reporter": ["text", "lcov"]
+          }
+        }
+      }
+    },
     "serve-static": {
       "executor": "@nx/web:file-server",
       "options": {
