--- a/libs/error/tsconfig.lib.json
+++ b/libs/error/tsconfig.lib.json
@@ -5,5 +5,6 @@
     "declaration": true,
     "types": ["node"]
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["src/**/*.spec.ts", "src/**/*.test.ts"]
 }
