--- a/libs/logging/tsconfig.lib.json
+++ b/libs/logging/tsconfig.lib.json
@@ -5,5 +5,11 @@
     "declaration": true,
     "types": ["node"]
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": [
+    "src/**/*.spec.ts",
+    "src/**/*.test.ts",
+    "**/*.spec.js",
+    "**/*.test.js"
+  ]
 }
