--- a/libs/nest/collage-maker/tsconfig.lib.json
+++ b/libs/nest/collage-maker/tsconfig.lib.json
@@ -5,5 +5,12 @@
     "outDir": "../../dist/libs/collage-maker"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "test",
+    "**/*spec.ts",
+    "src/**/*.spec.ts",
+    "src/**/*.test.ts"
+  ]
 }
