--- a/libs/nest/logger/tsconfig.lib.json
+++ b/libs/nest/logger/tsconfig.lib.json
@@ -11,5 +11,6 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["src/**/*.spec.ts", "src/**/*.test.ts"]
 }
