--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "20.0.6",
-    "@angular/compiler": "20.0.6",
-    "@angular/core": "20.0.6",
-    "@angular/forms": "20.0.6",
-    "@angular/material": "~20.1.3",
-    "@angular/platform-browser": "20.0.6",
-    "@angular/platform-browser-dynamic": "20.0.6",
-    "@angular/router": "20.0.6",
+    "@angular/common": "21.1.4",
+    "@angular/compiler": "21.1.4",
+    "@angular/core": "21.1.4",
+    "@angular/forms": "21.1.4",
+    "@angular/material": "21.1.4",
+    "@angular/platform-browser": "21.1.4",
+    "@angular/platform-browser-dynamic": "21.1.4",
+    "@angular/router": "21.1.4",
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
     "@nestjs/platform-express": "^11.0.0",
-    "@nx/devkit": "21.2.1",
+    "@nx/devkit": "22.5.1",
     "axios": "^1.6.0",
     "commander": "^14.0.0",
     "reflect-metadata": "^0.1.13",
@@ -27,71 +27,66 @@
     "sharp": "^0.34.2",
     "type-fest": "^4.41.0",
     "winston": "^3.17.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "0.16.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "20.0.5",
-    "@angular-devkit/core": "20.0.5",
-    "@angular-devkit/schematics": "20.0.5",
-    "@angular/cdk": "^20.1.3",
-    "@angular/cli": "~20.0.0",
-    "@angular/compiler-cli": "20.0.6",
-    "@angular/language-service": "20.0.6",
-    "@angular/material": "^20.1.3",
+    "@angular-devkit/build-angular": "21.1.4",
+    "@angular-devkit/core": "21.1.4",
+    "@angular-devkit/schematics": "21.1.4",
+    "@angular/cdk": "21.1.4",
+    "@angular/cli": "21.1.4",
+    "@angular/compiler-cli": "21.1.4",
+    "@angular/language-service": "21.1.4",
+    "@angular/material": "21.1.4",
     "@eslint/js": "^9.8.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.0",
-    "@nx/angular": "21.2.1",
-    "@nx/eslint": "21.2.1",
-    "@nx/eslint-plugin": "21.2.1",
-    "@nx/jest": "21.2.1",
-    "@nx/js": "21.2.1",
-    "@nx/nest": "^21.2.1",
-    "@nx/node": "21.2.1",
-    "@nx/plugin": "^21.2.1",
-    "@nx/rspack": "^21.2.1",
-    "@nx/vite": "^21.2.1",
-    "@nx/web": "21.2.1",
-    "@nx/webpack": "21.2.1",
-    "@nx/workspace": "21.2.1",
+    "@nx/angular": "22.5.1",
+    "@nx/eslint": "22.5.1",
+    "@nx/eslint-plugin": "22.5.1",
+    "@nx/js": "22.5.1",
+    "@nx/nest": "22.5.1",
+    "@nx/node": "22.5.1",
+    "@nx/plugin": "22.5.1",
+    "@nx/rspack": "22.5.1",
+    "@nx/vite": "22.5.1",
+    "@nx/web": "22.5.1",
+    "@nx/webpack": "22.5.1",
+    "@nx/workspace": "22.5.1",
     "@rspack/cli": "1.3.8",
-    "@rspack/core": "1.3.8",
-    "@rspack/dev-server": "1.1.1",
+    "@rspack/core": "1.7.6",
+    "@rspack/dev-server": "1.2.1",
     "@rspack/plugin-react-refresh": "^1.0.0",
-    "@schematics/angular": "20.0.5",
-    "@swc-node/register": "~1.9.1",
-    "@swc/cli": "~0.6.0",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
-    "@types/jest": "^29.5.12",
-    "@types/node": "18.16.9",
-    "@typescript-eslint/utils": "^8.33.1",
-    "@vitest/coverage-v8": "^3.0.5",
-    "@vitest/ui": "^3.0.0",
+    "@schematics/angular": "21.1.4",
+    "@swc-node/register": "1.11.1",
+    "@swc/cli": "0.8.0",
+    "@swc/core": "1.15.8",
+    "@swc/helpers": "0.5.18",
+    "@types/node": "20.19.0",
+    "@typescript-eslint/utils": "8.55.0",
+    "@vitest/coverage-v8": "4.0.9",
+    "@vitest/ui": "4.0.9",
     "ajv": "^8.0.0",
-    "angular-eslint": "20.1.1",
+    "angular-eslint": "21.2.0",
     "electron": "^37.1.0",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-node": "^29.7.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "21.2.1",
-    "nx-electron": "^21.0.1",
+    "nx": "22.5.1",
+    "nx-electron": "^22.0.0",
     "prettier": "^2.6.2",
     "react-refresh": "~0.14.0",
-    "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "tsx": "^4.20.3",
-    "typescript": "5.8.3",
-    "typescript-eslint": "^8.33.1",
-    "vite": "^6.0.0",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.55.0",
+    "vite": "7.3.1",
     "vite-plugin-dts": "~4.5.0",
-    "vitest": "^3.0.0",
+    "vitest": "4.0.9",
     "webpack-cli": "^5.1.4"
   }
 }
