--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,7 +4,7 @@
     "rootDir": ".",
     "sourceMap": true,
     "declaration": false,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
@@ -17,6 +17,7 @@
     "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
+      "@fotobox/cameras": ["libs/cameras/index.ts"],
       "@fotobox/collage-maker": ["libs/collage-maker/src/index.ts"],
       "@fotobox/electron-window": ["libs/electron/window/src/index.ts"],
       "@fotobox/error": ["libs/error/src/index.ts"],
