implement graphql api

--- a/libs/nest/collage-maker/tsconfig.lib.json
+++ b/libs/nest/collage-maker/tsconfig.lib.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "module": "ES2022",
     "declaration": true,
     "outDir": "../../dist/libs/collage-maker"
   },
