--- a/libs/nest/app-service/tsconfig.lib.json
+++ b/libs/nest/app-service/tsconfig.lib.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "module": "es2022",
     "outDir": "../../../dist/out-tsc",
     "declaration": true,
     "types": ["node"],
