--- a/libs/nest/collage-maker/project.json
+++ b/libs/nest/collage-maker/project.json
@@ -3,7 +3,5 @@
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/nest/collage-maker/src",
   "projectType": "library",
-  "tags": [],
-  "// targets": "to see all targets run: nx show project collage-maker --web",
-  "targets": {}
+  "tags": []
 }
