--- a/package.json
+++ b/package.json
@@ -16,17 +16,28 @@
     "@angular/platform-browser": "21.1.4",
     "@angular/platform-browser-dynamic": "21.1.4",
     "@angular/router": "21.1.4",
+    "@apollo/client": "^4.1.4",
+    "@apollo/server": "^5.4.0",
+    "@nestjs/apollo": "^13.2.4",
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
+    "@nestjs/graphql": "^13.2.4",
     "@nestjs/platform-express": "^11.0.0",
     "@nx/devkit": "22.5.1",
+    "apollo-angular": "^13.0.0",
     "axios": "^1.6.0",
     "commander": "^14.0.0",
+    "graphql": "^16.12.0",
+    "graphql-subscriptions": "^3.0.0",
+    "graphql-ws": "^6.0.7",
+    "node-ssdp": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "sharp": "^0.34.2",
     "type-fest": "^4.41.0",
     "winston": "^3.17.0",
+    "ws": "^8.19.0",
+    "xml2js": "^0.6.2",
     "zone.js": "0.16.0"
   },
   "devDependencies": {
@@ -63,7 +74,9 @@
     "@swc/cli": "0.8.0",
     "@swc/core": "1.15.8",
     "@swc/helpers": "0.5.18",
-    "@types/node": "20.19.0",
+    "@types/node": "20.19.9",
+    "@types/ws": "^8.18.1",
+    "@types/xml2js": "^0.4.14",
     "@typescript-eslint/utils": "8.55.0",
     "@vitest/coverage-v8": "4.0.9",
     "@vitest/ui": "4.0.9",
@@ -77,7 +90,7 @@
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "22.5.1",
     "nx-electron": "^22.0.0",
-    "prettier": "^2.6.2",
+    "prettier": "~3.6.2",
     "react-refresh": "~0.14.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
